--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "description": "CodeQuest RPG Backend API",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/app.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "vercel-build": "tsc",
+    "start": "node dist/app.js",
     "db:seed": "tsx src/seed.ts"
   },
   "dependencies": {
